Java port: SceneEditorApplication implements undo-redo history for scene and viewports